--- a/RoadMap/css/common.css
+++ b/RoadMap/css/common.css
@@ -3,7 +3,10 @@
   src: url('../font/Poppins-Regular.ttf');
   font-weight: normal;
 }
-
+:focus{
+  border: 0;
+  outline: 0;
+}
 body,
 body * {
   font-family: 'system';
