--- a/RoadMap/css/style.css
+++ b/RoadMap/css/style.css
@@ -17,3 +17,69 @@
 .contents{
   overflow: hidden;
 }
+._box_selected{
+  box-shadow: inset 0 0 0 2px #007ef3;
+}
+._box_selected ._join_component{
+  background-color: #FFF;
+  box-shadow: 0 0 0 1px #007ef3;
+}
+.btn-field .btn{
+  margin: 10px;
+}
+.modal-field{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #0000004c;
+}
+.modal-box{
+  width: 35%;
+  height: 70%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: #FFF;
+  border-radius: 5px;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+}
+.modal-head{
+  padding: 10px;
+  text-align: center;
+}
+.modal-body{
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+.forms{
+  margin: 10px;
+}
+.inp-field{
+  width: 80%;
+}
+.inp-field .inp{
+  width: 100%;
+}
+.inp-field .inp.small{
+  width: 100px;
+}
+.color-picker{
+  justify-content: start !important;
+  align-items: center;
+}
+.color-picker .inp{
+  width: 50%;
+}
+.color-picker *{
+  background-color: transparent;
+  border: 0;
+}
+.inp.cus-small{
+  display: block;
+  width: 35px;
+  height: 100%;
+}
